--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://lscarton.github.io/german-adjective-game",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -40,9 +43,3 @@
     "gh-pages": "^6.3.0"
   }
 }
-"homepage": "https://lscarton.github.io/german-adjective-game",
-"scripts": {
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
-}
-
